# WPP

./: CMakeLists.txt  README.md
protection_dll/: CMakeLists.txt  dllmain.cpp
protection_dll/include/: handle_monitor.h  protection.h
protection_dll/src/: dllmain.cpp  handle_monitor.cpp  protection.cpp
web_ui/: CMakeLists.txt
web_ui/include/: lodepng.h  process_manager.h
web_ui/include/process_manager/: base.h  icon_manager.h  process_info.h  system_info.h  windows_api.h
web_ui/src/: lodepng.cpp  main.cpp  process_manager.cpp
web_ui/src/process_manager/: base.cpp  icon_manager.cpp  process_info.cpp  process_manager.cpp  system_info.cpp
web_ui/src/static/css/: styles.css
web_ui/src/static/js/: main.js
